submitted clinical paper

--- a/report/clinical/main_manuscript.tex
+++ b/report/clinical/main_manuscript.tex
@@ -55,7 +55,7 @@
 \begin{frontmatter}
 
 \title{A Ready To Use Web-Application Providing a Personalized Biopsy Schedule for Men With Low-Risk PCa Under Active Surveillance\tnoteref{wordcount}}
-\tnotetext[wordcount]{Word count abstract (headings excluded): 300; Word count text: 2551}
+\tnotetext[wordcount]{Word count: abstract (headings excluded) 300; Text 2488; Total 2788}
 
 %% Group authors per affiliation:
 \author[1]{Anirudh Tomer\corref{corauthor}, MSc} 
@@ -77,14 +77,14 @@
 \author[1]{Dimitris Rizopoulos, PhD}
 \ead{d.rizopoulos@erasmusmc.nl}
 
-\author[6]{Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium}
+\author[6]{Movember Foundation's Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium}
 
 \address[1]{Department of Biostatistics, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[2]{Department of Public Health, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[3]{Department of Urology, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[4]{Department of Urology, Sk\r{a}ne University Hospital, Malm\"{o}, Sweden}
 \address[5]{Department of Biomedical Data Sciences, Leiden University Medical Center, Leiden, the Netherlands}
-\address[6]{The Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium members presented in Appendix A}
+\address[6]{The Movember Foundation's Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium members presented in Appendix A}
 
 %% or include affiliations in footnotes:
 
@@ -100,23 +100,23 @@ Active Surveillance\sep Biopsies \sep Personalized Medicine\sep Prostate Cancer 
 \linenumbers
 
 \input{mainmatter/introduction}
-%Intro: 515 words
-%Cumsum: 515 words
+%Intro: 510 words
+%Cumsum: 510 words
 \input{mainmatter/study_cohort}
-%Study cohort: 247 words
-%Cumsum: 762 words
+%Study cohort: 245 words
+%Cumsum: 755 words
 \input{mainmatter/stat_analysis}
-%Stat analysis: 437 words
-%Cumsum: 1199 words
+%Stat analysis: 433 words
+%Cumsum: 1194 words
 \input{mainmatter/result}
-%Stat analysis: 552 words
-%Cumsum: 1751 words
+%Stat analysis: 537 words
+%Cumsum: 1731 words
 \input{mainmatter/discussion}
-%Stat analysis: 672 words
-%Cumsum: 2423 words
+%Stat analysis: 673 words
+%Cumsum: 2403 words
 \input{mainmatter/conclusion}
-%Conclusion: 84 words
-%Cumsum: 2507 words
+%Conclusion: 85 words
+%Cumsum: 2488 words
 
 \input{mainmatter/author_contrib}
 \input{mainmatter/acknowledment}
