--- a/report/clinical/mainmatter/author_contrib.tex
+++ b/report/clinical/mainmatter/author_contrib.tex
@@ -1,7 +1,7 @@
 \section*{Author Contributions}
 Anirudh Tomer had full access to all the data in the study and takes responsibility for the integrity of the data and the accuracy of the data analysis.
 
-\textit{Study concept and design:} Tomer, Nieboer, Roobol, Bjartell, and Rizopoulos\\
+\noindent\textit{Study concept and design:} Tomer, Nieboer, Roobol, Bjartell, and Rizopoulos\\
 \textit{Acquisition of data:} Tomer, Nieboer, and Roobol\\
 \textit{Analysis and interpretation of data:} Tomer, Nieboer, and Rizopoulos\\
 \textit{Drafting of the manuscript:} Tomer, and Rizopoulos\\
