--- a/report/clinical/mainmatter/introduction.tex
+++ b/report/clinical/mainmatter/introduction.tex
@@ -8,7 +8,7 @@ Patients with low- and very low-risk screening-detected localized prostate cance
 \label{fig:delay_explanation}
 \end{figure}
 
-Usually, AS protocols schedule biopsies periodically. Consequently, upgrading is always detected with a time delay (Figure~\ref{fig:delay_explanation}). For detecting upgrading timely, many AS programs schedule fixed and frequent biopsies (e.g.,~annually) for all patients~\citep{nieboer2018active,loeb2014heterogeneity}. However, this leads to unnecessary biopsies in slow/non-progressing patients. Biopsies are invasive, may be painful, and are prone to medical complications such as bleeding and septicemia\citep{loeb2013systematic}. Biopsy burden and patient non-compliance to frequent biopsies~\citep{bokhorst2015compliance} have raised concerns regarding the optimal biopsy schedule~\citep{inoue2018comparative, bratt2013study}. In this regard, in some cohorts, magnetic resonance imaging (MRI) is employed for targeted biopsies and to study the value for tumor monitoring. Although, due to currently limited AS data, MRI's value is not clear. Others have proposed the option of scheduling biopsies infrequently (e.g., biennially)~\citep{inoue2018comparative,de2017estimating}. However, due to differences in baseline upgrading-risk across cohorts~\citep{inoue2018comparative}, fixed biopsy schemes can still lead to many unnecessary biopsies. A promising alternative to fixed and frequent biopsies is personalized biopsy schedules based on the patient-specific upgrading-risk (Figure~\ref{fig:riskBasedExample}).
+Usually, AS protocols schedule biopsies periodically. Consequently, upgrading is always detected with a time delay (Figure~\ref{fig:delay_explanation}). For detecting upgrading timely, many AS programs schedule fixed and frequent biopsies (e.g.,~annually) for all patients~\citep{nieboer2018active,loeb2014heterogeneity}. However, this leads to unnecessary biopsies in slow/non-progressing patients. Biopsies are invasive, may be painful, and are prone to medical complications such as bleeding and septicemia\citep{loeb2013systematic}. Biopsy burden and patient non-compliance to frequent biopsies~\citep{bokhorst2015compliance} have raised concerns regarding the optimal biopsy schedule~\citep{inoue2018comparative, bratt2013study}. In this regard, in some cohorts, magnetic resonance imaging (MRI) is employed for targeted biopsies and to study its value for tumor monitoring. Although, due to currently limited AS data, MRI's value is not clear. Others have proposed the option of scheduling biopsies infrequently (e.g., biennially)~\citep{inoue2018comparative,de2017estimating}. However, due to differences in baseline upgrading-risk across cohorts~\citep{inoue2018comparative}, fixed biopsy schemes can still lead to many unnecessary biopsies. A promising alternative to fixed schedules are personalized biopsy schedules based on the patient-specific upgrading-risk (Figure~\ref{fig:riskBasedExample}).
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/riskBasedExample.eps}}
@@ -16,6 +16,6 @@ Usually, AS protocols schedule biopsies periodically. Consequently, upgrading is
 \label{fig:riskBasedExample}
 \end{figure}
 
-The first challenge in creating personalized biopsy schedules is developing a statistical model to consolidate accumulated patient data (e.g., PSA, previous biopsy results) into estimates for upgrading-risk. Existing upgrading-risk~\citep{partin1993use,makarov2007updated} calculators use only the latest PSA measurement of a patient. Comparatively, more information is captured by considering all repeatedly measured PSA, previous biopsy results, and baseline characteristics of a patient. To this end, a suitable model is the joint model for time-to-event and longitudinal data~\citep{tomer2019, coley2017prediction,rizopoulos2012joint}. A joint model predicts the upgrading-risk in a personalized manner. However, a subsequent challenge is translating predicted risks into clinical decisions. For example, a 10\% upgrading-risk can be perceived high/low depending upon the patient's age. Patients may also weigh risks of upgrading with the potential \textit{consequences} of another biopsy. Two relevant consequences of biopsies (Figure~\ref{fig:delay_explanation}) are the timing and the total number of planned biopsies (burden), and the time delay in detecting upgrading (smaller is beneficial). The relative importance of these consequences can vary between the patients, and also over the follow-up period for the same patient.
+The first challenge in creating personalized biopsy schedules is developing a statistical model to consolidate accumulated patient data (e.g., PSA, previous biopsy results) into predictions for upgrading-risk. Existing upgrading-risk~\citep{partin1993use,makarov2007updated} calculators use only the latest PSA measurement of a patient. Comparatively, more information is captured by considering all repeatedly measured PSA, previous biopsy results, and baseline characteristics of a patient. To this end, a suitable model is the joint model for time-to-event and longitudinal data~\citep{tomer2019, coley2017prediction,rizopoulos2012joint}. A joint model predicts upgrading-risk in a personalized manner. However, a subsequent challenge is translating predicted risks into clinical decisions. For example, a 10\% upgrading-risk can be perceived high/low depending upon the patient's age. Patients may also weigh risks of upgrading with the potential \textit{consequences} of another biopsy. Two such relevant consequences (Figure~\ref{fig:delay_explanation}) are the timing and the total number of planned biopsies (burden), and the time delay in detecting upgrading (smaller is beneficial). The relative importance of these consequences can vary between the patients, and also within a patient over the follow-up period.
 
 The goal of this work is two-fold. First, to develop a robust, generalizable model that gives reliable estimates for individual upgrading-risk in AS. Second, to utilize the predicted upgrading-risks to create personalized biopsy schedules. To facilitate shared decision making of biopsy schedules, we also intend to provide quantitative estimates of the aforementioned \textit{consequences} of opting for a personalized versus the standard fixed schedule. For developing our model, we will use the world's largest AS dataset PRIAS. Subsequently, we want to externally validate our model in the largest six AS cohorts from the Movember Foundation's GAP3 database~\citep{gap3_2018}. Last, we intend to implement our model and methodology in a web-application.
