--- a/report/clinical/supplementary.tex
+++ b/report/clinical/supplementary.tex
@@ -83,14 +83,14 @@
 \author[1]{Dimitris Rizopoulos, PhD}
 \ead{d.rizopoulos@erasmusmc.nl}
 
-\author[6]{Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium}
+\author[6]{Movember Foundation's Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium}
 
 \address[1]{Department of Biostatistics, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[2]{Department of Public Health, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[3]{Department of Urology, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[4]{Department of Urology, Sk\r{a}ne University Hospital, Malm\"{o}, Sweden}
 \address[5]{Department of Biomedical Data Sciences, Leiden University Medical Center, Leiden, the Netherlands}
-\address[6]{The Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium members presented in Appendix F}
+\address[6]{The Movember Foundation's Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium members presented in Appendix F}
 
 %% or include affiliations in footnotes:
 \end{frontmatter}
@@ -107,7 +107,7 @@
 \clearpage
 \input{supplementary/E_source_code}
 \clearpage
-\section{Appendix A. Members of The Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium}
+\section{Appendix A. Members of The Movember Foundation's Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium}
 \input{mainmatter/gap3members}
  
 \bibliography{bibliography}
